# music-gen-ui

./: LICENSE  README.md  generate_list.js  generate_list.py  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
back/: pyproject.toml
back/app/: main.py
example_server/: .gitignore  main.py
example_server/default_assets/: 0814.mid  210825.mid  6GdFB0XaC1g.mid  City of Stars.mid  Dancing On My Own.mid  Heathens.mid  XtgZcs-LQFU.mid  ai1.mid  ai2.mid  マイナーピース.mid
front/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: App.vue  player.ts  utils.ts
front/src/assets/: main.css
front/src/components/: EditorGroup.vue  HeaderComp.vue  PianorollEditor.vue  TabSwitcher.vue
resource/: list.json  settings.json
resource/Cherry-picked Generation from Scratch/: 0.mid
resource/Generate from Seed/Ground truth/: 00060000.mid  00061000.mid
resource/Generate from Seed/Our model/: 00060000.mid  00061000.mid
server/: example.py  pyproject.toml
server/music_gen_server/: __init__.py  server.py
server/src/music_gen_server/: server.py
src/: App.vue  main.ts  player.ts
src/assets/: main.css
src/components/: EditorGroup.vue  FooterComp.vue  HeaderComp.vue  LeftBar.vue  NullableSlider.vue  PianorollEditor.vue  SectionControl.vue  SettingsPanel.vue  SliderComp.vue  TabSwitcher.vue
src/stores/: bpmStore.ts
ui/: .gitignore  README.md  generate_list.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  api.ts  player.ts  utils.ts
ui/src/assets/: main.css
(+9 files in other folders)
